Fix: Bugs in test classed related to refactoring the old architecture